--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,6 @@
-$main-color: #61dafb;
+$main-color: #e74c3c;
 $main-text-gray-color: #484848;
-$light-gray-color: #a9a9a9;
+$light-gray-color: #f8f7f7;
+$gray-color: #a9a9a9;
 $main-black-color: #20232a;
-$main-white-color: #ededed;
+$main-white-color: white;
