--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,7 +1,22 @@
 @import 'variables.scss';
 @import 'header/header.scss';
+@import 'form/form.scss';
+
 @import 'rental/rental-listing.scss';
 @import 'rental/rental-detail.scss';
+
+.clickable {
+  &:hover {
+    cursor:pointer;
+  }
+}
+
+.mainSection{
+  
+  background-color: $light-gray-color;
+  height: 50rem;
+}
+
 
 .page-title {
   font-size: 30px;
@@ -21,11 +36,21 @@
   color: #d68000;
 }
 
-.mainSection{
-  background-color: $light-gray-color;
 
-}
 
 .mainpics {
   padding-top: 40px;
+}
+
+.btn-bwm {
+  background-color: $main-color;
+  border-color: $main-color;
+  color:white;
+  padding: 15px 30px;
+  font-size: 20px;
+
+  &:hover, &:focus, &:active {
+    border-color: $main-color !important;
+    background-color: $main-color !important;
+  }
 }
