Added booking feature

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -2,8 +2,11 @@
 @import 'header/header.scss';
 @import 'form/form.scss';
 
+@import 'booking/booking.scss';
 @import 'rental/rental-listing.scss';
 @import 'rental/rental-detail.scss';
+
+
 
 .clickable {
   &:hover {
