--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,3 +4,5 @@ $light-gray-color: #f8f7f7;
 $gray-color: #a9a9a9;
 $main-black-color: #20232a;
 $main-white-color: white;
+
+$light-gray-color-color-2: #dedada;
