Added functionality. Added rental page and created rental functionality. Displayed username and owner section in header.

--- a/src/styles/header/_header.scss
+++ b/src/styles/header/_header.scss
@@ -35,4 +35,14 @@
   .nav-item {
    color:$gray-color !important;
   }
+
+  .dropdown-menu {
+    .dropdown-item{
+      font-size: 14px;
+
+      &:active{
+        background-color: $main-color;
+      }
+    }
+  }
 }
