--- a/src/styles/booking/_booking.scss
+++ b/src/styles/booking/_booking.scss
@@ -1,7 +1,12 @@
+@import "user-bookings";
 
 .booking {
   padding: 20px;
   border: 1px solid $light-gray-color-color-2;
+
+  a:hover {
+    color: white;
+  }
 
   .btn-confirm {
     font-size: 17px;
@@ -10,7 +15,7 @@
   }
 
   label {
-    font-size:12px;
+    font-size: 12px;
     font-weight: 300;
     margin-bottom: 0;
   }
@@ -40,18 +45,18 @@
     margin-bottom: 10px;
 
     .btn-login {
-    text-align:center;
-    font-size: 15px;
-    padding: 15px;
+      text-align: center;
+      font-size: 15px;
+      padding: 15px;
 
-    &:hover, &:focus {
+      &:hover,
+      &:focus {
         color: white;
         text-decoration: none;
       }
     }
   }
 }
-
 
 // MODAL
 .booking-modal {
