--- a/src/styles/rental/_rental-listing.scss
+++ b/src/styles/rental/_rental-listing.scss
@@ -6,7 +6,6 @@
   }
 
   .rental-detail-link {
-
     &:hover {
       text-decoration: none;
     }
@@ -15,6 +14,7 @@
   /* SINGLE CARD STYLES*/
   .bwm-card {
     border: none;
+    margin-bottom: 20px;
 
     .card-block {
       padding-top: 8px;
@@ -24,7 +24,6 @@
         font-weight: 500;
         font-size: 12px;
         text-transform: uppercase;
-       
       }
 
       .card-title {
