--- a/src/styles/rental/_rental-manage.scss
+++ b/src/styles/rental/_rental-manage.scss
@@ -52,6 +52,12 @@
     font-size: 14px;
   }
 
+  .btn-warning {
+    font-size: 14px;
+    color: white;
+    margin-left: 10px;
+  }
+
   .btn-bwm {
     margin-right: 10px;
   }
